# shim-studio

./: 404.html  CNAME  capability_statement.html  capability_statement.py  index.bak1.html  index.html  pyproject.toml  studio.html  testing.html  testing2.html  visualiser.html
.github/workflows/: deploy.yml
data/projects/: CASBE.md  Figurehead.md  Salesian.md
legacy/: index.bak2.html  routes.js
