[project]
name = "shim-engine"
version = "0.1.0"
description = "Sovereign on-premises data platform for layout-dense construction documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "weasyprint>=62.0",
    "streamlit>=1.35.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
managed = true